# scrapy-infatica

./: .gitignore  README.md  pyproject.toml
scrapy_infatica/: __init__.py  infaticaproxy.crt  middleware.py  utils.py
test_spider/: settings.py
test_spider/spiders/: test_infatica_proxy.py
