[tool.poetry]
name = "scrapy-infatica"
version = "0.1.0"
description = ""
authors = ["Mihai Balint <balint.mihai@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "1.7.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
